# aethel

./: Cargo.toml  MANIFESTO.md  README.md  ROADMAP.md  WHITE_PAPER.md  red_team_test.sh  vault_logic.py
aethel-project/: LICENSE  SECURITY.md
aethel-project/src/: gate.rs
src/: gate.rs  main.rs  vault.rs
