[package]
name = "aethel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For hardware-level security in 2026
passki = "0.1.0" 
# For encrypted memory
rusqlite = { version = "0.29", features = ["bundled-sqlcipher"] }
